--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -444,6 +444,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       right:20px;
       content:" ";
     }
+    #lockedDialog{
+      width:300px;
+      height:450px;
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%,-50%);
+    }
 
     </style>
   </template>
