--- a/src/elements/account-header/dependencies.html
+++ b/src/elements/account-header/dependencies.html
@@ -7,6 +7,8 @@
 <link rel="import" href="../../../bower_components/iron-icons/image-icons.html" />
 <link rel="import" href="../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
+<link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html" />
 
 <link rel="import" href="../../elements/guuey-photo-editor/guuey-photo-editor.html" />
 
