--- a/src/pages/default/def-account/def-account.html
+++ b/src/pages/default/def-account/def-account.html
@@ -46,16 +46,13 @@
         photo="[[user.photoURL]]">
       </account-header>
       <div class="pageInnerCont padded">
-        <h2>basic info</h2>
-        <paper-input label="update display name" value="{{displayNameUpdate}}"></paper-input>
-        <guuey-photo-editor value="{{photoURLUpdate}}"></guuey-photo-editor>
-        <paper-button on-tap="_saveUserUpdate">update account</paper-button>
-
-        <h2>secure info</h2>
-        <paper-input label="update email" value="{{secureEmail}}"></paper-input>
-        <paper-input label="confirm update email" value="{{secureEmailConfirm}}"></paper-input>
-        <paper-input label="update password" value="{{securePass}}"></paper-input>
-        <paper-input label="confrim update password" value="{{securePassConfirm}}"></paper-input>
+        <h2>Secure Account Information</h2>
+        <h3>Account Email</h3>
+        <paper-input type="email" label="update email" value="{{secureEmail}}"></paper-input>
+        <paper-input type="email" label="confirm update email" value="{{secureEmailConfirm}}"></paper-input>
+        <h3>Account Password</h3>
+        <paper-input type="password" label="update password" value="{{securePass}}"></paper-input>
+        <paper-input type="password" label="confrim update password" value="{{securePassConfirm}}"></paper-input>
         <paper-button on-tap="_saveSecureUpdate">update account</paper-button>
       </div>
 
@@ -70,58 +67,51 @@
         is: 'def-account',
         ready:function(){
           this.fire("pageLoaded", {page:this.page});
+          this.addEventListener("AccountPhotoChanged", this._photoChanged);
+          this.addEventListener("updateDisplayName", this.updateDisplayName);
         },
         properties:{
           user:{
-            type:Object,
-            observer:"_userChanged"
-          },
-          displayNameUpdate:{
-            type:String,
-            value:null
+            type:Object
           },
           emailUpdate:{
             type:String,
             value:null
-          },
-          photoURLUpdate:{
-            type:String
           },
           reauth:{
             type:Object,
             value:{}
           },
         },
-        _userChanged:function(user){
-          //console.log(user);
+        observers:[
+          "_userChanged(user.*)"
+        ],
+        updateDisplayName:function(e){
+          var that = this;
+          this.$.auth.user.updateProfile({displayName:e.detail.name})
+            .then(function(){
+              that.fire("openToast", {toastText: "Account updated, refresh pages to see changes"});
+            }, function(err){
+              that.fire("openToast", {toastText: "There was an error updating your account: "+err});
+            });
+
         },
-        _saveUserUpdate:function(){
-          var updateObj = {};
-
-          if(this.displayNameUpdate){
-            updateObj.displayName = this.displayNameUpdate;
-            this.$.auth.user.updateProfile(updateObj)
-              .then(function(){
-                this.fire("openToast", {toastText: "Account updated."});
-              }.bind(this), function(err){
-                this.fire("openToast", {toastText: "There was an error updating your account: "+err});
-              }.bind(this));
-          };
-
-          if(this.photoURLUpdate){
-            this.$.storage._uploadFile(this.photoURLUpdate)
-            .then(function(fileLoc) {
-                updateObj.photoURL = fileLoc;
-                this.$.auth.user.updateProfile(updateObj)
-                  .then(function(){
-                    this.fire("openToast", {toastText: "Account updated."});
-                  }.bind(this), function(err){
-                    this.fire("openToast", {toastText: "There was an error updating your account: "+err});
-                  }.bind(this));
-            }.bind(this), function(err){
-              this.fire("openToast", {toastText:"There was an error saving your photo: "+err})
-            }.bind(this));
-          };
+        _photoChanged:function(e){
+          var that = this;
+          this.$.storage._uploadFile(e.detail.photo)
+            .then(function(fileLoc){
+              that.$.auth.user.updateProfile({photoURL:fileLoc})
+                .then(function(){
+                  that.fire("openToast", {toastText: "Account updated."});
+                }, function(err){
+                  that.fire("openToast", {toastText: "There was an error updating your account: "+err});
+                });
+            }, function(err){
+              that.fire("openToast", {toastText: "There was an error updating your account: "+err});
+            });
+        },
+        _userChanged:function(user){
+          console.log(user.base);
         },
         _saveSecureUpdate:function(){
           if(this.secureEmail){
