--- a/src/elements/guuey-photo-editor/index.html
+++ b/src/elements/guuey-photo-editor/index.html
@@ -6,9 +6,9 @@
 
     <title>guuey-photo-editor</title>
 
-    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../../../../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
-    <link rel="import" href="../iron-component-page/iron-component-page.html">
+    <link rel="import" href="../../../bower_components/iron-component-page/iron-component-page.html">
   </head>
   <body>
     <iron-component-page src="guuey-photo-editor.html"></iron-component-page>
