--- a/src/elements/guuey-photo-editor/dialog-no-style.html
+++ b/src/elements/guuey-photo-editor/dialog-no-style.html
@@ -18,9 +18,24 @@
 <script>
   Polymer({
     is:"dialog-no-style",
+
     behaviors:[
       Polymer.PaperDialogBehavior
-    ]
+    ],
+    //overwrite _modalChanged from Polymer.paperDialogBehavior
+    _modalChanged: function(modal, readied) {
+      // modal implies noCancelOnOutsideClick, noCancelOnEscKey and withBackdrop.
+      // We need to wait for the element to be ready before we can read the
+      // properties values.
+      if (!readied) {
+        return;
+      }
+
+      this.__prevNoCancelOnOutsideClick = this.noCancelOnOutsideClick;
+      this.__prevNoCancelOnEscKey = this.noCancelOnEscKey;
+      this.noCancelOnOutsideClick = true;
+      this.noCancelOnEscKey = true;
+    },
   });
 
 </script>
